syntax = "proto3";
package server;

message KeyWord {
  string Field = 1;
  string Word = 2;
}