syntax = "proto3";
package messages;

import "key_word.proto";

message Document {
  string Id = 1;
  int64 ScoreId = 2;
  uint64 BitsFeature = 3;
  repeated KeyWord keWords = 4;
  bytes Bytes = 5;
}